--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,7 @@
         "react"
     ],
     "rules": {
+        "react/prop-types": "off",
+        "react/jsx-props-no-spreading": "off"
     }
 }
