--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-hook-form": "^7.31.0",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
